# architect-rs

./: 404.html  CHANGELOG.md  Cargo.toml  HEADER.txt  LICENSE  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: coverage.sh  test-architect-dry-run.sh  test-architect-select.sh  test-architect.sh
.github/workflows/: docs.yml  release.yml  rust-publish.yml  rust-quality.yml  rust.yml  tests.yml
cli/: index.html
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/cli/: README.md
docs/src/expert-mode/: README.md  environment-variables.md
docs/src/installation/: README.md
docs/src/templates/: README.md  fetching.md  structure.md
docs/src/templates/configuration/: README.md  context.md  filters.md  questions.md
docs/src/templates/rendering/: README.md  helpers.md
expert-mode/: environment-variables.html  index.html
installation/: index.html
src/: args.rs  config.rs  context.rs  dirs.rs  git.rs  main.rs  render.rs  spec.rs  utils.rs
src/config/: mod.rs  schema.ts
src/fetch/: embedded.rs  installed.rs  mod.rs
src/helpers/: helper_dir_if.rs  helper_package.rs  mod.rs
src/schema/: architect.ts
src/term/: mod.rs  theme.rs
src/utils/: constants.rs  context.rs  errors.rs  mod.rs  reader.rs
templates/: fetching.html  index.html  structure.html
templates/configuration/: context.html  exclusions-inclusions-conditional-files.html  filters.html  index.html  questions.html
templates/rendering/: helpers.html  index.html
test-resources/: schema.json
test-resources/auto-template.input/: .architect.json  some-excluded-file.txt
test-resources/auto-template.input/.another-hidden-dir/: not-included.txt
test-resources/auto-template.input/io/v47/test/: file-in-explicit-path.txt  file-in-generated-path.txt
test-resources/auto-template.input/templates/: override-template.txt.handlebars  some-template.txt.hbs
test-resources/auto-template.input/{{package somePackage}}/: file-in-generated-path.txt
test-resources/select-template.input/: .architect.json  selected-features.txt.hbs
test-resources/simple-template.expected/en/: simple-template.html
test-resources/simple-template.input/: simple-template.html.hbs
