[package]
name = "architect-rs"
version = "0.1.0"
authors = ["Alex Katlein <dev@vemilyus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# CLI dependencies
clap = "2.33.3"
console = "0.14.1"
dialoguer = "0.8.0"

# Fetching
git2 = "0.13.20"

# Rendering
handlebars = "4.0.1"
handlebars_misc_helpers = { version = "0.12.1", features = [ "string", "json" ] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

# Utils
dircpy = "0.3.6"
lazy_static = "1.4.0"
regex = "1.5.4"
tempfile = "3.2.0"

[[bin]]
name = "architect"
path = "src/main.rs"
