[package]
name = "architect-rs"
version = "0.13.0"
authors = ["Alex Katlein <dev@vemilyus.com>"]
license = "BSD 3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "architect"
path = "src/main.rs"

[dependencies]

# CLI dependencies
clap = "2.33.3"
dialoguer = "0.9.0"
indicatif = "0.17.0-beta.1"

# Fetching
git2 = "0.13.23"
git2_credentials = "0.7.3"

# Rendering
handlebars = "4.1.3"
handlebars_misc_helpers = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# Utils
anyhow = "1.0.45"
crossbeam = "0.8.1"
dircpy = "0.3.8"
globset = "0.4.8"
itertools = "0.10.1"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
path-absolutize = "3.0.11"
regex = "1.5.4"
tempfile = "3.2.0"
thiserror = "1.0.30"
walkdir = "2.3.2"
